// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Menu/BadgesMenu Custom smoke-test 1`] = `
<div class="mb-12">
  <div class="flex justify-between items-start">
    <div class="flex gap-2 flex-wrap">
    </div>
    <div class="mx-2 w-fit">
      <div class="relative w-fit h-fit">
        <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 p-2">
          <span class="ri-equalizer-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] fill-white group-hover:fill-white">
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`design-system/Menu/BadgesMenu Default smoke-test 1`] = `
<div class="mb-52">
  <div class="flex justify-between items-start">
    <div class="flex gap-2 flex-wrap">
    </div>
    <div class="mx-2 relative w-fit">
      <div class="relative w-fit h-fit">
        <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 p-2">
          <span class="ri-equalizer-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] fill-white group-hover:fill-white">
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
